<resources>
    <string name="app_name">Kemet News</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="SignUp">Sign Up</string>
    <string name="Register">Register</string>
    <string name="Email">Email</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="have_account">Already have an account?</string>
    <string name="other">or Sign in with</string>
    <string name="login">Login</string>
    <string name="Category">Category</string>
    <string name="Home_Tab">Home</string>
    <string name="Sports_Tab">Sports</string>
    <string name="Health_Tab">Health</string>
    <string name="Food_Tab">Food</string>
    <string name="Politics_Tab">Politics</string>
    <string name="Environment_Tab">Environment</string>
    <string name="Technology_Tab">Technology</string>
    <string name="Science_Tab">Science</string>
    <string name="Entertainment_Tab">Entertainment</string>
    <string name="Business_Tab">Business</string>
    <string name="Sports">sports</string>
    <string name="Health">health</string>
    <string name="Food">food</string>
    <string name="Politics">politics</string>
    <string name="Environment">environment</string>
    <string name="Technology">technology</string>
    <string name="Science">science</string>
    <string name="Entertainment">entertainment</string>
    <string name="Business">business</string>
    <string name="Language">en</string>
    <string name="Country">us</string>
    <string name="search_hint">Search news…</string>
    <string name="News_Button">Read Full News</string>
    <string name="api_key">pub_15329d9b604a7340ac290242912e607b2efc2</string>
</resources>