<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/sign_up"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="@string/SignUp"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/roundbutton"
        android:backgroundTint="@color/light_black"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/light_white"
        android:textColorHint="@color/light_white"
        android:autofillHints="" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/roundbutton"
        android:backgroundTint="@color/light_black"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="10dp"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/light_white"
        android:textColorHint="@color/light_white"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/roundbutton"
        android:backgroundTint="@color/light_black"
        android:drawableStart="@drawable/ic_baseline_vpn_key_24"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/light_white"
        android:textColorHint="@color/light_white"
        android:autofillHints="" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/roundbutton"
        android:backgroundTint="@color/light_black"
        android:drawableStart="@drawable/ic_baseline_vpn_key_24"
        android:drawablePadding="10dp"
        android:hint="@string/Confirm_Password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/light_white"
        android:textColorHint="@color/light_white"
        android:autofillHints="" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_Button"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm_password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/oval_button"
        app:backgroundTint="@color/yellow"
        android:text="@string/Register"/>

    <TextView
        android:id="@+id/have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_Button"
        android:text="@string/have_account"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>